--- a/style.css
+++ b/style.css
@@ -86,20 +86,23 @@ h2{
  padding: .7rem;
  color: white;
 }
+.no-display{
+    display: none
+}
 /*Attribution*/
 .attribution, .attribution a{
-    text-align: center;
-    font-size: .8rem;
     padding-bottom: 2rem;
+    font-size: 8px;
 }
 /*Share Pop-up*/
+
 .share{
     background-color: var(--DarkGrayishBlue);
     border-radius: 0 0 .5rem .5rem;
-    display: flex;
     flex-direction: row;
     justify-content: space-between;
     padding: 1.5rem 1.8rem;
+    display: none;
 }
 .left-icons{
     display: flex;
@@ -136,7 +139,79 @@ h2{
 .sharedBtn{
     margin: auto 0;
 }
-#shareSection{
-    display: none;
+.display{
+    display: flex;
 }
 /*Media Queries*/
+@media screen and (min-width: 800px)
+{
+.main{
+    display: grid;
+    grid-template-columns: 40% 1fr;
+    grid-gap: 20px;
+    margin: 10rem auto;
+    border-radius: .8rem;
+    box-shadow: 10px;
+}
+.drawers{
+    display: none;
+}
+.section-one{
+    max-height: 100%;
+    border-radius: .8rem 0 0 .8rem;
+    background-image: url(https://github.com/lynnecodes/FM-articlepreviewcomponent/blob/master/images/drawers.jpg?raw=true);
+    background-size: cover;
+}
+.other-sections{
+    padding: 20px;
+}
+.text-section{
+    margin: 0;
+}
+h2{
+    font-size: 1.5rem;
+}
+.text-section p{
+    line-height: 20px;
+}
+.section-three{
+    display: grid;
+    grid-template-columns: 1fr 50px;
+    grid-gap: 10px;
+    margin: 0;
+}
+.left img{
+    border-radius: 100%;
+    width: 40px;
+}
+.attribution, .attribution a{
+    font-size: 11px;
+}
+}
+@media screen and (min-width: 1024px)
+{
+.other-sections{
+    padding: 50px;
+}
+.text-section p{
+    padding-bottom: 1.8rem;
+}
+}
+@media screen and (min-width: 1440px)
+{
+.other-sections{
+    padding: 80px;
+}
+.text-section p{
+    padding-bottom: 2.2rem;
+}
+}
+@media screen and (min-width: 1440px)
+{
+.other-sections{
+    padding: 100px;
+}
+.text-section p{
+    padding-bottom: 2.8rem;
+}
+}
