--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ h2{
     display: flex;
 }
 /*Media Queries*/
-@media screen and (min-width: 800px)
+@media screen and (min-width: 768px)
 {
 .main{
     display: grid;
@@ -179,14 +179,57 @@ h2{
     grid-template-columns: 1fr 50px;
     grid-gap: 10px;
     margin: 0;
+    position: relative;
+    cursor: pointer;
 }
 .left img{
     border-radius: 100%;
     width: 40px;
 }
+#share-section{
+    display: none;
+}
+.relative{
+    position: relative;
+}
+}
+
+.poppedup{
+    visibility: hidden;
+    width: 190px;
+    background: hsl(217, 19%, 35%);
+    color: hsl(212, 23%, 69%);
+    text-align: center;
+    border-radius: 5px;
+    position: absolute;
+    z-index: 1;
+    bottom: 130%;
+    right: -20%;
+    letter-spacing: 3px;
+    display: flex;
+    padding: 10px 15px;
+    justify-content: space-around;
+    box-shadow: 3px 5px var(--LightGrayishBlue);
+}
+.poppedup p{
+    margin: auto 0;
+}
+.poppedup::after{
+    content: "";
+    position: absolute;
+    top: 100%;
+    left: 80px;
+    margin-left: -5px;
+    border-width: 8px;
+    border-style: solid;
+    border-color:  hsl(217, 19%, 35%) transparent transparent transparent;
+}
+.show{
+    visibility: visible;
+}
+
 .attribution, .attribution a{
     font-size: 11px;
-}
 }
 @media screen and (min-width: 1024px)
 {
